--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     assets.loadImage('playerSprite', './assets/XDefault.png'),
                     assets.loadImage('effectsSprite', './assets/effects.png'),
                     assets.loadImage('tankSprite', './assets/sigma_viral.png'),
+                    assets.loadImage('mavericksSprite', './assets/mavericks.png'),
                 ]);
 
                 // Start game with highway
