add new stage, fix its tiles

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                     assets.loadStage('highway'),
                     assets.loadStage('frozentown'),
                     assets.loadStage('aircraftcarrier'),
+                    assets.loadStage('crystalmine'),
                 ]);
 
                 loading.textContent = 'MEGAGAME 2026 — Loading sprites...';
@@ -113,10 +114,11 @@
                     chillpSlide:    './assets/sounds/sigma/chillpSlide.ogg',
                     maverickDie:    './assets/sounds/sigma/maverickDie.ogg',
                     // Music (loop points encoded in filenames)
-                    highway:   './assets/music/highway.44,44.87,463.ogg',
-                    frozentown:'./assets/music/frozentown.0.40,531.ogg',
-                    bossroom:  './assets/music/bossroom.1,5.29,664.ogg',
-                    win:       './assets/music/win.ogg',
+                    highway:      './assets/music/highway.44,44.87,463.ogg',
+                    frozentown:   './assets/music/frozentown.0.40,531.ogg',
+                    crystalmine:  './assets/music/crystalmine.2,710.44,517.ogg',
+                    bossroom:     './assets/music/bossroom.1,5.29,664.ogg',
+                    win:          './assets/music/win.ogg',
                 });
 
                 // Start game with stage select screen
