--- a/tools/collision-editor.html
+++ b/tools/collision-editor.html
@@ -69,6 +69,7 @@
                 <option value="highway">highway</option>
                 <option value="frozentown">frozentown</option>
                 <option value="aircraftcarrier" selected>aircraftcarrier</option>
+                <option value="crystalmine">crystalmine</option>
             </select>
         </label>
         <label>Tile Size:
