--- a/tools/stage-select-editor.html
+++ b/tools/stage-select-editor.html
@@ -131,6 +131,7 @@
                     <option value="highway">highway</option>
                     <option value="frozentown">frozentown</option>
                     <option value="aircraftcarrier">aircraftcarrier</option>
+                    <option value="crystalmine">crystalmine</option>
                 </select>
             </label>
             <label>Display Name:
