add weather control stage

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     assets.loadStage('frozentown'),
                     assets.loadStage('aircraftcarrier'),
                     assets.loadStage('crystalmine'),
+                    assets.loadStage('weathercontrol'),
                 ]);
 
                 loading.textContent = 'MEGAGAME 2026 — Loading sprites...';
@@ -117,6 +118,7 @@
                     highway:      './assets/music/highway.44,44.87,463.ogg',
                     frozentown:   './assets/music/frozentown.0.40,531.ogg',
                     crystalmine:  './assets/music/crystalmine.2,710.44,517.ogg',
+                    weathercontrol: './assets/music/weathercontrol.0,1.49,946.ogg',
                     bossroom:     './assets/music/bossroom.1,5.29,664.ogg',
                     win:          './assets/music/win.ogg',
                 });
