--- a/tools/collision-editor.html
+++ b/tools/collision-editor.html
@@ -70,6 +70,7 @@
                 <option value="frozentown">frozentown</option>
                 <option value="aircraftcarrier" selected>aircraftcarrier</option>
                 <option value="crystalmine">crystalmine</option>
+                <option value="weathercontrol">weathercontrol</option>
             </select>
         </label>
         <label>Tile Size:
