--- a/tools/stage-select-editor.html
+++ b/tools/stage-select-editor.html
@@ -132,6 +132,7 @@
                     <option value="frozentown">frozentown</option>
                     <option value="aircraftcarrier">aircraftcarrier</option>
                     <option value="crystalmine">crystalmine</option>
+                    <option value="weathercontrol">weathercontrol</option>
                 </select>
             </label>
             <label>Display Name:
