--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     assets.loadStage('aircraftcarrier'),
                     assets.loadStage('crystalmine'),
                     assets.loadStage('weathercontrol'),
+                    assets.loadStage('robotjunkyard'),
                 ]);
 
                 loading.textContent = 'MEGAGAME 2026 — Loading sprites...';
@@ -119,6 +120,7 @@
                     frozentown:   './assets/music/frozentown.0.40,531.ogg',
                     crystalmine:  './assets/music/crystalmine.2,710.44,517.ogg',
                     weathercontrol: './assets/music/weathercontrol.0,1.49,946.ogg',
+                    robotjunkyard: './assets/music/robotjunkyard.0,1.46,207.ogg',
                     bossroom:     './assets/music/bossroom.1,5.29,664.ogg',
                     win:          './assets/music/win.ogg',
                 });
