--- a/tools/collision-editor.html
+++ b/tools/collision-editor.html
@@ -71,6 +71,7 @@
                 <option value="aircraftcarrier" selected>aircraftcarrier</option>
                 <option value="crystalmine">crystalmine</option>
                 <option value="weathercontrol">weathercontrol</option>
+                <option value="robotjunkyard">robotjunkyard</option>
             </select>
         </label>
         <label>Tile Size:
