--- a/tools/stage-select-editor.html
+++ b/tools/stage-select-editor.html
@@ -133,6 +133,7 @@
                     <option value="aircraftcarrier">aircraftcarrier</option>
                     <option value="crystalmine">crystalmine</option>
                     <option value="weathercontrol">weathercontrol</option>
+                    <option value="robotjunkyard">robotjunkyard</option>
                 </select>
             </label>
             <label>Display Name:
