--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                     highway:      './assets/music/highway.44,44.87,463.ogg',
                     frozentown:   './assets/music/frozentown.0.40,531.ogg',
                     crystalmine:  './assets/music/crystalmine.2,710.44,517.ogg',
+                    aircraftcarrier: './assets/music/aircraftcarrier.1,638.51,733.ogg',
                     weathercontrol: './assets/music/weathercontrol.0,1.49,946.ogg',
                     robotjunkyard: './assets/music/robotjunkyard.0,1.46,207.ogg',
                     bossroom:     './assets/music/bossroom.1,5.29,664.ogg',
