--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                     assets.loadStage('crystalmine'),
                     assets.loadStage('weathercontrol'),
                     assets.loadStage('robotjunkyard'),
+                    assets.loadStage('tower'),
                 ]);
 
                 loading.textContent = 'MEGAGAME 2026 — Loading sprites...';
@@ -122,6 +123,7 @@
                     aircraftcarrier: './assets/music/aircraftcarrier.1,638.51,733.ogg',
                     weathercontrol: './assets/music/weathercontrol.0,1.49,946.ogg',
                     robotjunkyard: './assets/music/robotjunkyard.0,1.46,207.ogg',
+                    tower: './assets/music/tower.6,492.67,324.ogg',
                     bossroom:     './assets/music/bossroom.1,5.29,664.ogg',
                     win:          './assets/music/win.ogg',
                 });
