--- a/tools/collision-editor.html
+++ b/tools/collision-editor.html
@@ -72,6 +72,7 @@
                 <option value="crystalmine">crystalmine</option>
                 <option value="weathercontrol">weathercontrol</option>
                 <option value="robotjunkyard">robotjunkyard</option>
+                <option value="tower">tower</option>
             </select>
         </label>
         <label>Tile Size:
