--- a/tools/stage-select-editor.html
+++ b/tools/stage-select-editor.html
@@ -134,6 +134,7 @@
                     <option value="crystalmine">crystalmine</option>
                     <option value="weathercontrol">weathercontrol</option>
                     <option value="robotjunkyard">robotjunkyard</option>
+                    <option value="tower">tower</option>
                 </select>
             </label>
             <label>Display Name:
