--- a/tools/stage-select-editor.html
+++ b/tools/stage-select-editor.html
@@ -135,6 +135,7 @@
                     <option value="weathercontrol">weathercontrol</option>
                     <option value="robotjunkyard">robotjunkyard</option>
                     <option value="tower">tower</option>
+                    <option value="sigma2">sigma2</option>
                 </select>
             </label>
             <label>Display Name:
