--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     assets.loadStage('weathercontrol'),
                     assets.loadStage('robotjunkyard'),
                     assets.loadStage('tower'),
+                    assets.loadStage('sigma2'),
                 ]);
 
                 loading.textContent = 'MEGAGAME 2026 — Loading sprites...';
@@ -124,6 +125,7 @@
                     weathercontrol: './assets/music/weathercontrol.0,1.49,946.ogg',
                     robotjunkyard: './assets/music/robotjunkyard.0,1.46,207.ogg',
                     tower: './assets/music/tower.6,492.67,324.ogg',
+                    sigma2: './assets/music/sigma2.0.61,373.ogg',
                     bossroom:     './assets/music/bossroom.1,5.29,664.ogg',
                     win:          './assets/music/win.ogg',
                 });
