--- a/tools/collision-editor.html
+++ b/tools/collision-editor.html
@@ -73,6 +73,7 @@
                 <option value="weathercontrol">weathercontrol</option>
                 <option value="robotjunkyard">robotjunkyard</option>
                 <option value="tower">tower</option>
+                <option value="sigma2">sigma2</option>
             </select>
         </label>
         <label>Tile Size:
