--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 await Promise.all([
                     assets.loadImage('playerSprite', './assets/XDefault.png'),
                     assets.loadImage('zeroSprite', './assets/zero.png'),
+                    assets.loadImage('sigmaSprite', './assets/sigma.png'),
                     assets.loadImage('effectsSprite', './assets/effects.png'),
                     assets.loadImage('tankSprite', './assets/sigma_viral.png'),
                     assets.loadImage('mavericksSprite', './assets/mavericks.png'),
