add volcanic zone

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     assets.loadStage('robotjunkyard'),
                     assets.loadStage('tower'),
                     assets.loadStage('sigma2'),
+                    assets.loadStage('volcaniczone'),
                 ]);
 
                 loading.textContent = 'MEGAGAME 2026 — Loading sprites...';
@@ -127,6 +128,7 @@
                     robotjunkyard: './assets/music/robotjunkyard.0,1.46,207.ogg',
                     tower: './assets/music/tower.6,492.67,324.ogg',
                     sigma2: './assets/music/sigma2.0.61,373.ogg',
+                    volcaniczone: './assets/music/volcaniczone.0,1.39,779.ogg',
                     bossroom:     './assets/music/bossroom.1,5.29,664.ogg',
                     win:          './assets/music/win.ogg',
                 });
