--- a/tools/stage-select-editor.html
+++ b/tools/stage-select-editor.html
@@ -136,6 +136,7 @@
                     <option value="robotjunkyard">robotjunkyard</option>
                     <option value="tower">tower</option>
                     <option value="sigma2">sigma2</option>
+                    <option value="volcaniczone">volcaniczone</option>
                 </select>
             </label>
             <label>Display Name:
