--- a/tools/stage-select-editor.html
+++ b/tools/stage-select-editor.html
@@ -137,6 +137,7 @@
                     <option value="tower">tower</option>
                     <option value="sigma2">sigma2</option>
                     <option value="volcaniczone">volcaniczone</option>
+                    <option value="shipyard">shipyard</option>
                 </select>
             </label>
             <label>Display Name:
