--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                     assets.loadStage('tower'),
                     assets.loadStage('sigma2'),
                     assets.loadStage('volcaniczone'),
+                    assets.loadStage('shipyard'),
                 ]);
 
                 loading.textContent = 'MEGAGAME 2026 — Loading sprites...';
@@ -129,6 +130,7 @@
                     tower: './assets/music/tower.6,492.67,324.ogg',
                     sigma2: './assets/music/sigma2.0.61,373.ogg',
                     volcaniczone: './assets/music/volcaniczone.0,1.39,779.ogg',
+                    shipyard: './assets/music/shipyard.15,198.51,725.ogg',
                     bossroom:     './assets/music/bossroom.1,5.29,664.ogg',
                     win:          './assets/music/win.ogg',
                 });
