add mountain map

--- a/tools/stage-select-editor.html
+++ b/tools/stage-select-editor.html
@@ -138,6 +138,7 @@
                     <option value="sigma2">sigma2</option>
                     <option value="volcaniczone">volcaniczone</option>
                     <option value="shipyard">shipyard</option>
+                    <option value="mountain">mountain</option>
                 </select>
             </label>
             <label>Display Name:
