--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     assets.loadStage('sigma2'),
                     assets.loadStage('volcaniczone'),
                     assets.loadStage('shipyard'),
+                    assets.loadStage('mountain'),
                 ]);
 
                 loading.textContent = 'MEGAGAME 2026 — Loading sprites...';
@@ -131,6 +132,7 @@
                     sigma2: './assets/music/sigma2.0.61,373.ogg',
                     volcaniczone: './assets/music/volcaniczone.0,1.39,779.ogg',
                     shipyard: './assets/music/shipyard.15,198.51,725.ogg',
+                    mountain: './assets/music/mountain.17,361.50,207.ogg',
                     bossroom:     './assets/music/bossroom.1,5.29,664.ogg',
                     win:          './assets/music/win.ogg',
                 });
