--- a/tools/collision-editor.html
+++ b/tools/collision-editor.html
@@ -74,6 +74,9 @@
                 <option value="robotjunkyard">robotjunkyard</option>
                 <option value="tower">tower</option>
                 <option value="sigma2">sigma2</option>
+                <option value="volcaniczone">volcaniczone</option>
+                <option value="shipyard">shipyard</option>
+                <option value="mountain">mountain</option>
             </select>
         </label>
         <label>Tile Size:
