add deep sea base

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     assets.loadStage('volcaniczone'),
                     assets.loadStage('shipyard'),
                     assets.loadStage('mountain'),
+                    assets.loadStage('deepseabase'),
                 ]);
 
                 loading.textContent = 'MEGAGAME 2026 — Loading sprites...';
@@ -133,6 +134,7 @@
                     volcaniczone: './assets/music/volcaniczone.0,1.39,779.ogg',
                     shipyard: './assets/music/shipyard.15,198.51,725.ogg',
                     mountain: './assets/music/mountain.17,361.50,207.ogg',
+                    deepseabase: './assets/music/deepseabase.0,05.46,605.ogg',
                     bossroom:     './assets/music/bossroom.1,5.29,664.ogg',
                     win:          './assets/music/win.ogg',
                 });
