--- a/tools/collision-editor.html
+++ b/tools/collision-editor.html
@@ -77,6 +77,7 @@
                 <option value="volcaniczone">volcaniczone</option>
                 <option value="shipyard">shipyard</option>
                 <option value="mountain">mountain</option>
+                <option value="deepseabase">deepseabase</option>
             </select>
         </label>
         <label>Tile Size:
