--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                     assets.loadImage('tankSprite', './assets/sigma_viral.png'),
                     assets.loadImage('mavericksSprite', './assets/mavericks.png'),
                     assets.loadImage('ramMemory', './assets/ram-memory-compressed2.png'),
+                    assets.loadImage('menuSprite', './assets/menu.png'),
                     assets.loadImage('stageSelect', './assets/stage-select.png'),
                     assets.loadJSON('stageLocations', './assets/stage-locations.json'),
                 ]);
