add portrait to menu, adjust menu

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
                     assets.loadImage('mavericksSprite', './assets/mavericks.png'),
                     assets.loadImage('ramMemory', './assets/ram-memory-compressed2.png'),
                     assets.loadImage('menuSprite', './assets/menu.png'),
+                    assets.loadImage('xMenuPortrait', './assets/X-menu.png'),
                     assets.loadImage('stageSelect', './assets/stage-select.png'),
                     assets.loadJSON('stageLocations', './assets/stage-locations.json'),
                 ]);
