add navigable shop

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                     assets.loadImage('menuSprite', './assets/menu.png'),
                     assets.loadImage('xMenuPortrait', './assets/X-menu.png'),
                     assets.loadImage('stageSelect', './assets/stage-select.png'),
+                    assets.loadImage('shopBg', './assets/shiba-shop-complete.png'),
                     assets.loadJSON('stageLocations', './assets/stage-locations.json'),
                 ]);
 
