--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
                     assets.loadImage('xMenuPortrait', './assets/X-menu.png'),
                     assets.loadImage('stageSelect', './assets/stage-select.png'),
                     assets.loadImage('shopBg', './assets/shiba-shop-complete.png'),
+                    assets.loadImage('x1Boots', './assets/XBootsMenu.png'),
+                    assets.loadImage('x1Arms', './assets/XArmMenu.png'),
                     assets.loadJSON('stageLocations', './assets/stage-locations.json'),
                 ]);
 
