add X1 boots equipment to the shop and game

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
                     assets.loadImage('shopBg', './assets/shiba-shop-complete.png'),
                     assets.loadImage('x1Boots', './assets/XBootsMenu.png'),
                     assets.loadImage('x1Arms', './assets/XArmMenu.png'),
+                    assets.loadImage('xBootsOverlay', './assets/XBoots.png'),
                     assets.loadJSON('stageLocations', './assets/stage-locations.json'),
                 ]);
 
