add x1 arm armor

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                     assets.loadImage('x1Boots', './assets/XBootsMenu.png'),
                     assets.loadImage('x1Arms', './assets/XArmMenu.png'),
                     assets.loadImage('xBootsOverlay', './assets/XBoots.png'),
+                    assets.loadImage('xArmOverlay', './assets/XArm.png'),
                     assets.loadJSON('stageLocations', './assets/stage-locations.json'),
                 ]);
 
